--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,9 @@ android:
     - tools # to get the new `repository-11.xml`
     - tools # see https://github.com/travis-ci/travis-ci/issues/6040#issuecomment-219367943)
     - platform-tools
-    - build-tools-24.0.2
+    - build-tools-25.0.0
     - android-24
+    - extra-android-m2repository
 
 before_install:
    - chmod +x gradlew
